# cgru

./: .gitignore
afanasy/: .gitignore
afanasy/src/include/: afanasy.h
afanasy/src/libafanasy/: afkafka.cpp  afkafka.h  environment.cpp  environment.h  hostres.cpp  hostres.h  name_af.cpp  name_af.h  name_afnet.cpp  render.cpp  render.h
afanasy/src/libafanasy/common/: launchprogram.cpp
afanasy/src/project.cmake/: .gitignore  CMakeLists.txt  build.sh  win_build_msvc.cmd
afanasy/src/project.cmake/libafanasy/: CMakeLists.txt
afanasy/src/project.cmake/vendors/ubuntu/rdkafka/include/librdkafka/: rdkafka.h  rdkafkacpp.h
afanasy/src/project.cmake/vendors/ubuntu/rdkafka/lib/pkgconfig/: rdkafka++-static.pc  rdkafka-static.pc
afanasy/src/project.cmake/vendors/ubuntu/rdkafka/share/librdkafka/: usage  vcpkg.spdx.json  vcpkg_abi_info.txt
afanasy/src/project.cmake/vendors/ubuntu/rdkafka/share/lz4/: vcpkg.spdx.json  vcpkg_abi_info.txt
afanasy/src/project.cmake/vendors/ubuntu/rdkafka/share/vcpkg-cmake/: vcpkg.spdx.json  vcpkg_abi_info.txt
afanasy/src/project.cmake/vendors/ubuntu/rdkafka/share/vcpkg-cmake-config/: vcpkg.spdx.json  vcpkg_abi_info.txt
afanasy/src/project.cmake/vendors/win/rdkafka/debug/lib/: lz4d.lib  rdkafka++.lib
afanasy/src/project.cmake/vendors/win/rdkafka/lib/: lz4.lib  rdkafka.lib
afanasy/src/project.cmake/vendors/win/rdkafka/lib/pkgconfig/: rdkafka++.pc  rdkafka.pc
afanasy/src/project.cmake/vendors/win/rdkafka/share/librdkafka/: vcpkg.spdx.json  vcpkg_abi_info.txt
afanasy/src/server/: main.cpp  renderaf.h  rendercontainer.cpp  solver.cpp
utilities/: install_depends_devel.sh
(+10 files in other folders)
